Revert "fix some sonar code smells (#5581)"
This reverts commit 8909d157c61776a34b1da379eab70973afe5293b.